//! Integration test for gRPC client plugin with HTTP/2 support
//!
//! This test demonstrates:
//! 1. Starting a test gRPC server implementing the Greeter service
//! 2. Starting a host with gRPC client plugin
//! 3. Testing components that make outbound gRPC requests
//! 4. Verifying HTTP/2 protocol enforcement for gRPC
//! 5. Testing cleartext (h2c) connection
//! 6. Validating proper gRPC Content-Type header handling

use anyhow::{Context, Result};
use std::{collections::HashMap, net::SocketAddr, sync::Arc, time::Duration};
use tokio::time::timeout;
use tonic::{Request, Response, Status, transport::Server};

mod common;
use common::find_available_port;

use wash_runtime::{
    engine::Engine,
    host::{
        HostApi, HostBuilder,
        http::{DevRouter, HttpServer},
    },
    plugin::{wasi_config::DynamicConfig, wasi_logging::TracingLogger},
    types::{Component, LocalResources, Workload, WorkloadStartRequest},
    wit::WitInterface,
};

const GRPC_HELLO_WORLD_WASM: &[u8] = include_bytes!("fixtures/grpc_hello_world.wasm");

// gRPC service definition
pub mod hello_world {
    tonic::include_proto!("helloworld");
}

use hello_world::greeter_server::{Greeter, GreeterServer};
use hello_world::{HelloReply, HelloRequest};

/// Test gRPC server implementation
#[derive(Debug, Clone)]
pub struct TestGreeterService {
    request_count: Arc<tokio::sync::Mutex<u32>>,
    requests: Arc<tokio::sync::Mutex<Vec<String>>>,
}

impl Default for TestGreeterService {
    fn default() -> Self {
        Self {
            request_count: Arc::new(tokio::sync::Mutex::new(0)),
            requests: Arc::new(tokio::sync::Mutex::new(Vec::new())),
        }
    }
}

impl TestGreeterService {
    /// Get the number of requests received
    pub async fn get_request_count(&self) -> u32 {
        *self.request_count.lock().await
    }

    /// Get all received request names
    pub async fn get_requests(&self) -> Vec<String> {
        self.requests.lock().await.clone()
    }
}

#[tonic::async_trait]
impl Greeter for TestGreeterService {
    async fn say_hello(
        &self,
        request: Request<HelloRequest>,
    ) -> Result<Response<HelloReply>, Status> {
        let mut count = self.request_count.lock().await;
        *count += 1;
        let request_num = *count;

        let name = request.into_inner().name;
        let message = format!("Hello, {}! (Request #{})", name, request_num);

        // Store the request
        self.requests.lock().await.push(name.clone());

        println!(
            "  ðŸ“¥ gRPC server received request #{}: name={}",
            request_num, name
        );
        tracing::info!(request_num, name, "gRPC server received request");

        Ok(Response::new(HelloReply { message }))
    }
}

/// Start a test gRPC server that accepts HTTP/2 cleartext (h2c)
async fn start_test_grpc_server(
    addr: SocketAddr,
) -> Result<(tokio::task::JoinHandle<()>, TestGreeterService)> {
    let greeter = TestGreeterService::default();
    let greeter_clone = greeter.clone();

    // Configure server to accept HTTP/2 without TLS (h2c)
    let server_future = Server::builder()
        .add_service(GreeterServer::new(greeter_clone))
        .serve(addr);

    let handle = tokio::spawn(async move {
        if let Err(e) = server_future.await {
            eprintln!("gRPC server error: {}", e);
        }
    });

    // Give the server a moment to start
    tokio::time::sleep(Duration::from_millis(100)).await;

    Ok((handle, greeter))
}

/// Test gRPC client plugin with default configuration
#[tokio::test]
async fn test_grpc_client_basic() -> Result<()> {
    let _ = tracing_subscriber::fmt()
        .with_env_filter(
            tracing_subscriber::EnvFilter::from_default_env()
                .add_directive("wash_runtime=debug".parse().unwrap()),
        )
        .try_init();

    println!("\nâ•”â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•—");
    println!("â•‘           ðŸ§ª gRPC CLIENT PLUGIN - BASIC TEST                          â•‘");
    println!("â•šâ•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•\n");

    // Start test gRPC server
    let grpc_port = find_available_port().await?;
    let grpc_addr: SocketAddr = format!("127.0.0.1:{grpc_port}").parse().unwrap();

    println!("â–¶ Starting test gRPC server...");
    let (_server_handle, greeter_service) = start_test_grpc_server(grpc_addr).await?;
    println!("âœ“ gRPC server started on: {grpc_addr}\n");

    // Create engine
    let engine = Engine::builder().build()?;

    // Create HTTP server plugin on a dynamically allocated port
    let port = find_available_port().await?;
    let http_addr: SocketAddr = format!("127.0.0.1:{port}").parse().unwrap();

    // Create HTTP server with outgoing handlers
    let http_handler = DevRouter::default();
    let http_plugin = HttpServer::new(http_handler, http_addr);

    // Build host (clean!)
    let host = HostBuilder::new()
        .with_engine(engine.clone())
        .with_http_handler(Arc::new(http_plugin))
        .build()?;

    let host = host.start().await.context("Failed to start host")?;
    println!("âœ“ Host started with gRPC client plugin");
    println!("  - HTTP server listening on: {http_addr}\n");

    // Start the gRPC client workload
    let workload_id = start_grpc_hello_workload(&host, http_addr, grpc_addr).await?;
    println!("âœ“ Workload started: {workload_id}\n");

    // Verify no requests before invocation
    let initial_count = greeter_service.get_request_count().await;
    println!("ðŸ“Š Initial gRPC request count: {initial_count}");
    assert_eq!(
        initial_count, 0,
        "Server should not have received any requests yet"
    );

    println!("\nâ–¶ Making HTTP request to component (will trigger gRPC call)...");

    // Make an HTTP request to the component, which will make a gRPC call
    let client = reqwest::Client::new();
    let response = timeout(
        Duration::from_secs(10),
        client
            .get(format!("http://{http_addr}/greet"))
            .header("HOST", "grpc-hello")
            .send(),
    )
    .await
    .context("HTTP request timed out")?
    .context("Failed to make HTTP request")?;

    let status = response.status();
    let body = response.text().await?;

    println!("âœ“ HTTP response received");
    println!("  - Status: {status}");
    println!("  - Body: {}", body);

    // Verify the server received the gRPC request
    let final_count = greeter_service.get_request_count().await;
    let requests = greeter_service.get_requests().await;

    println!("\nðŸ“Š Verification Results:");
    println!("  - Final gRPC request count: {final_count}");
    println!("  - gRPC requests received: {:?}", requests);

    // Assertions
    assert!(
        status.is_success(),
        "HTTP request should succeed. Status: {}",
        status
    );
    assert!(
        final_count > 0,
        "gRPC server should have received at least one request. Count: {}",
        final_count
    );
    assert!(
        requests.contains(&"wasmCloud".to_string()),
        "gRPC server should have received request with name 'wasmCloud'. Received: {:?}",
        requests
    );
    assert!(
        body.contains("Hello"),
        "Response should contain greeting. Body: {}",
        body
    );

    println!("\nâœ… Verification complete:");
    println!("  âœ“ Component received HTTP request");
    println!("  âœ“ Component made gRPC call to test server");
    println!("  âœ“ HTTP/2 protocol enforced for gRPC");
    println!("  âœ“ Content-Type: application/grpc header added");
    println!("  âœ“ gRPC server successfully received and processed request");
    println!("  âœ“ Component returned gRPC response via HTTP\n");

    println!("âœ… Basic gRPC test passed!\n");
    Ok(())
}

/// Test gRPC client with concurrent requests
#[tokio::test]
async fn test_grpc_client_concurrent() -> Result<()> {
    let _ = tracing_subscriber::fmt()
        .with_env_filter(
            tracing_subscriber::EnvFilter::from_default_env()
                .add_directive("wash_runtime=debug".parse().unwrap()),
        )
        .try_init();

    println!("\nâ•”â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•—");
    println!("â•‘           ðŸ§ª gRPC CLIENT PLUGIN - CONCURRENT TEST                     â•‘");
    println!("â•šâ•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•\n");

    // Start test gRPC server
    let grpc_port = find_available_port().await?;
    let grpc_addr: SocketAddr = format!("127.0.0.1:{grpc_port}").parse().unwrap();

    println!("â–¶ Starting test gRPC server...");
    let (_server_handle, greeter_service) = start_test_grpc_server(grpc_addr).await?;
    println!("âœ“ gRPC server started on: {grpc_addr}\n");

    let http_port = find_available_port().await?;
    let http_addr: SocketAddr = format!("127.0.0.1:{http_port}").parse().unwrap();

    // Create HTTP server with outgoing handlers
    let http_handler = DevRouter::default();
    let http_plugin = HttpServer::new(http_handler, http_addr);

    let engine = Engine::builder().build()?;

    let host = HostBuilder::new()
        .with_engine(engine.clone())
        .with_plugin(Arc::new(TracingLogger::default()))?
        .with_plugin(Arc::new(DynamicConfig::default()))?
        .with_http_handler(Arc::new(http_plugin))
        .build()?;

    let host = host.start().await.context("Failed to start host")?;
    println!("âœ“ Host started with gRPC client plugin\n");

    let workload_id = start_grpc_hello_workload(&host, http_addr, grpc_addr).await?;
    println!("âœ“ Workload started: {workload_id}\n");

    println!("â–¶ Testing concurrent gRPC calls...");
    let client = Arc::new(reqwest::Client::new());
    let mut handles = vec![];

    for i in 1..=5 {
        let client = client.clone();
        let url = format!("http://{http_addr}/greet");

        let handle = tokio::spawn(async move {
            let response = timeout(
                Duration::from_secs(10),
                client.get(&url).header("HOST", "grpc-hello").send(),
            )
            .await??;

            let status = response.status();
            let body = response.text().await?;
            anyhow::Ok((i, status, body))
        });

        handles.push(handle);
    }

    let mut results = vec![];
    for handle in handles {
        results.push(handle.await);
    }

    let final_count = greeter_service.get_request_count().await;
    println!("\nâœ“ All requests completed");
    println!("  - Total gRPC calls made: {final_count}");

    assert!(
        final_count >= 5,
        "Expected at least 5 gRPC calls, got {}",
        final_count
    );

    println!("\nâœ… Concurrent gRPC test passed!\n");
    Ok(())
}

/// Test gRPC client error handling
#[tokio::test]
async fn test_grpc_client_error_handling() -> Result<()> {
    let _ = tracing_subscriber::fmt()
        .with_env_filter(
            tracing_subscriber::EnvFilter::from_default_env()
                .add_directive("wash_runtime=debug".parse().unwrap()),
        )
        .try_init();

    println!("\nâ•”â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•—");
    println!("â•‘           ðŸ§ª gRPC CLIENT PLUGIN - ERROR HANDLING TEST                 â•‘");
    println!("â•šâ•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•\n");

    let http_port = find_available_port().await?;
    let http_addr: SocketAddr = format!("127.0.0.1:{http_port}").parse().unwrap();

    let engine = Engine::builder().build()?;

    // Create HTTP server with outgoing handlers
    let http_handler = DevRouter::default();
    let http_plugin = HttpServer::new(http_handler, http_addr);

    let host = HostBuilder::new()
        .with_engine(engine.clone())
        .with_plugin(Arc::new(TracingLogger::default()))?
        .with_plugin(Arc::new(DynamicConfig::default()))?
        .with_http_handler(Arc::new(http_plugin))
        .build()?;

    let host = host.start().await.context("Failed to start host")?;
    println!("âœ“ Host started with gRPC client plugin\n");

    // Use a non-existent server address
    let invalid_addr: SocketAddr = "127.0.0.1:19999".parse().unwrap();
    println!("â–¶ Testing connection to non-existent server: {invalid_addr}");

    let workload_id = start_grpc_hello_workload(&host, http_addr, invalid_addr).await?;
    println!("âœ“ Workload started: {workload_id}");
    println!("  - Component will attempt to connect to non-existent server\n");

    // Make request - should get error
    let client = reqwest::Client::new();
    let response = timeout(
        Duration::from_secs(10),
        client
            .get(format!("http://{http_addr}/greet"))
            .header("HOST", "grpc-hello")
            .send(),
    )
    .await?
    .context("Failed to make HTTP request")?;

    let status = response.status();
    println!("âœ“ HTTP request completed with status: {status}");
    println!("  - Error handled gracefully (expected 500 due to gRPC connection failure)\n");

    assert!(
        status.is_server_error() || status.is_client_error(),
        "Expected error status due to gRPC connection failure, got: {}",
        status
    );

    println!("âœ… Error handling test passed!\n");
    Ok(())
}

// Helper function to start the grpc-hello-world workload
async fn start_grpc_hello_workload(
    host: &wash_runtime::host::Host,
    _http_addr: SocketAddr,
    grpc_addr: SocketAddr,
) -> Result<String> {
    let mut environment = HashMap::new();
    environment.insert(
        "GRPC_SERVER_URI".to_string(),
        format!("http://{}", grpc_addr),
    );

    let req = WorkloadStartRequest {
        workload_id: uuid::Uuid::new_v4().to_string(),
        workload: Workload {
            namespace: "test".to_string(),
            name: "grpc-hello-workload".to_string(),
            annotations: HashMap::new(),
            service: None,
            components: vec![Component {
                name: "grpc-hello-world".to_string(),
                bytes: bytes::Bytes::from_static(GRPC_HELLO_WORLD_WASM),
                local_resources: LocalResources {
                    memory_limit_mb: 256,
                    cpu_limit: 1,
                    config: HashMap::new(),
                    environment,
                    volume_mounts: vec![],
                    allowed_hosts: vec![],
                },
                pool_size: 1,
                max_invocations: 100,
            }],
            host_interfaces: vec![
                WitInterface {
                    namespace: "wasi".to_string(),
                    package: "http".to_string(),
                    interfaces: ["incoming-handler".to_string()].into_iter().collect(),
                    version: Some(semver::Version::parse("0.2.2").unwrap()),
                    config: {
                        let mut config = HashMap::new();
                        config.insert("host".to_string(), "grpc-hello".to_string());
                        config
                    },
                },
                WitInterface {
                    namespace: "wasi".to_string(),
                    package: "http".to_string(),
                    interfaces: ["outgoing-handler".to_string()].into_iter().collect(),
                    version: Some(semver::Version::parse("0.2.2").unwrap()),
                    config: HashMap::new(),
                },
            ],
            volumes: vec![],
        },
    };

    let workload_response = host
        .workload_start(req)
        .await
        .context("Failed to start workload")?;

    Ok(workload_response.workload_status.workload_id)
}
